•	Make it so club and season card images are fixed width and height so that the cards appear aligned.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,6 +42,34 @@
 
 /* Custom Bootstrap css start */
 
+@media screen and (max-width: 767px) {
+    .card-img-top {
+    width: 100%;
+    height: 45vw;
+    object-fit: cover;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1439px) {
+    .card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+    .card-img-top {
+    width: 100%;
+    height: 10vw;
+    object-fit: cover;
+  }
+}
+
+
+
+
+
 .jumbotron {
   padding: 1rem 2rem;
 }
